--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./src",
+    "paths": {
+      "*": [
+        "*",
+        "*.module.css"
+      ]
+    }
   },
   "include": [
     "src"
