--- a/favicon/manifest.json
+++ b/favicon/manifest.json
@@ -3,12 +3,12 @@
   "short_name": "scroll feed",
   "icons": [
     {
-      "src": "../logo192.png",
+      "src": "./logo192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "../logo512.png",
+      "src": "./logo512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
